Fix highlights on safari

--- a/ianmtz/ianmtz/wwwroot/css/site.css
+++ b/ianmtz/ianmtz/wwwroot/css/site.css
@@ -28,6 +28,10 @@ body {
     background-color: rgba(130, 186, 26, 0.75);
 }
 
+body {
+    outline-color: transparent;
+}
+
 .noPad {
     padding: 0 !important;
 }
@@ -40,6 +44,15 @@ body {
 .navbar-brand {
     color: #fff;
     font-weight: lighter;
+}
+
+.navbar-nav .nav-link:focus, 
+.navbar-nav .nav-link:hover {
+    outline: none;
+}
+
+.show > .nav-link {    
+    text-shadow: 0 0 7px rgba(255, 255, 255, 0.4);
 }
 
 .bold {
